# project-net-zero-backend

./: .codecarbon.config  .gitignore  Procfile  README.md  requirements.txt  server.py
codecarbon-logic/: test_codecarbon.py
input-repo/: coverage.json
input-repo/src/: __init__.py
input/sample_project/: coverage.json
optimize-logic/: README.md  benchmark.py  emissions.py  function_spec.py  graph.py  llm_client.py  main.py  optimizer.py
output-repo/: math_utils.py
pipeline/: analysis.py  dashboard.py  emissions_runner.py  feature_extractor.py  run_pipeline.py  scraper.py
pipeline/data/: analysis.json  emissions.csv  functions.csv
server/: __init__.py  server.py
spec-logic/: .gitignore  LANGGRAPH_WORKFLOW.md  README.md  pyproject.toml  requirements.txt  run.py
spec-logic/output/: coverage_report.html  results.json
spec-logic/output/langgraph_workflow/: ast_summary.txt  final_coverage_report.html  final_graph.json  final_graph.mmd
spec-logic/src/function_spec_graph/: __init__.py  cli.py  langgraph_workflow.py  workflow_cli.py
spec-logic/src/function_spec_graph/converters/: __init__.py  converter_cli.py  json_to_python.py
spec-logic/src/function_spec_graph/parser/: __init__.py  ai_matcher.py  ai_spec_generator.py  graph_parser.py
src/: main.py  test_pipeline.py
src/convertor/: __init__.py  cli.py  inplace_rewriter.py  json_to_python.py  report.py
src/optimizer_logic/: crusoe_client.py  emissions.py  graph.py  llm_client.py  optimizer.py  venv_runner.py
src/parser/: __init__.py  ai_spec_generator.py  graph_parser.py
(+25 files in other folders)
