[project]
name = "function-spec-graph"
version = "0.1.0"
description = "Generate a graph that maps Python project functions to spec/test functions."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
function-spec-graph = "function_spec_graph.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
