# pyproject.toml — only needed if you want to `pip install -e .` instead of
# using run.py directly.  Safe to delete if you only use run.py.

[project]
name = "function-spec-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
